--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: Jesán Velázquez-Reséndiz
-subtitle: Engineer, physicist and AI
+title: Jesán VR
+subtitle: Physicist (quantum optics, BEC, microcavities), AI and engineer
 ---
